# D435-Y8I-Gstreamer-Plugin

./: Example_Launch.txt  README.md
examples/SimpleExample/: CMakeLists.txt  main.cpp
plugin/: CMakeLists.txt
plugin/include/: gstrsdeinterlace.hpp
plugin/src/: gstrsdeinterlace.cpp
